fix: download & images endpoint bug fix & spec updated
